--- a/style.css
+++ b/style.css
@@ -40,14 +40,14 @@ display: flex;
 }
 
 #addTodoBtn {
-margin-top: 7rem;
- width: 110px;
-  height: 43px;
-  border-radius: 20px;
-  font-weight:bold;
-  cursor:pointer;
-  background-color:#007bff;
-  text-align: center;
+    margin-top: 113px;
+    width: 100px;
+    height: 43px;
+    border-radius: 10px;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: #007bff;
+    text-align: center;
 }
 
 #addTodoBtn:hover{
